# ForerunnerVR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
resources/: forerunner.rc  resource.h
resources/VR/OpenVR/: actions.json  forerunner.vrmanifest  oculus_touch.json
src/common/config/: config.cpp  config.h  config_definitions.h
src/common/utils/: inject.cpp  inject.h  log.cpp  log.h  singleton.h  utils.h
src/common/vr/: IVR.h  Matrices.h  emulatedvr.cpp  emulatedvr.h  matrices.cpp  openvr.cpp  openvr.h
src/launcher/: config_editor.cpp  config_editor.h  imgui_extensions.cpp  imgui_extensions.h  launcher.cpp  launcher.h  main.cpp
src/launcher/fonts/: halo_font.cpp
src/payload/: CMakeLists.txt
src/payload/delta/: cameracomponent.cpp  cameracomponent.h  deltamodule.cpp  deltamodule.h  inputcomponent.cpp  inputcomponent.h  rendercomponent.cpp  rendercomponent.h  uicomponent.cpp  uicomponent.h
src/payload/delta/blam/: halo_main.cpp  halo_main.h
src/payload/delta/blam/animations/: animation_channel.h  animation_graph_definitions.cpp  animation_graph_definitions.h  animation_interpolation.h  animation_manager.h
src/payload/delta/blam/camera/: observer.h
src/payload/delta/blam/cutscene/: cinematics.cpp  cinematics.h
src/payload/delta/blam/effects/: player_effects.h
src/payload/delta/blam/game/: aim_assist.h  game.cpp  game.h  players.cpp  players.h
src/payload/delta/blam/interface/: first_person_weapons.cpp  first_person_weapons.h  hud.h  interface.cpp  interface.h
src/payload/delta/blam/main/: main_render.cpp  main_render.h  main_time.h
src/payload/delta/blam/math/: integer_math.h  matrix_math.h  real_math.h
src/payload/delta/blam/memory/: data.cpp  data.h
src/payload/delta/blam/objects/: object_location.h  objects.cpp  objects.h
src/payload/delta/blam/rasterizer/: rasterizer_globals.h  rasterizer_main.cpp  rasterizer_main.h
src/payload/delta/blam/render/: render.h  render_cameras.h
src/payload/delta/blam/scenario/: scenario_fog.h
src/payload/delta/blam/simulation/: simulation.h
src/payload/delta/blam/tag_files/: tag_groups.cpp  tag_groups.h
src/payload/delta/blam/units/: unit_control.h
src/payload/delta/patches/render/: draw_splitscreen_borders.cpp  draw_splitscreen_borders.h  get_player_window_count.cpp  get_player_window_count.h  rasterizer_present.cpp  rasterizer_present.h  update_player_view_frustum.cpp  update_player_view_frustum.h
src/payload/forerunner/: dllmain.cpp  forerunnermodule.cpp  forerunnermodule.h  modulehandler.cpp  modulehandler.h  patch.cpp  patch.h
